# finance-be

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml  schema.yml
finance/: settings.py  urls.py
records/: filters.py  models.py  serializers.py  urls.py  views.py
records/management/commands/: populate_db.py
records/migrations/: 0001_initial.py  0002_rename_user_records_created_by_alter_records_id.py  0003_record_delete_records.py  0004_alter_record_description.py
records/services/: dashboard.py
transactions/: filters.py  models.py  serializers.py  urls.py  views.py
transactions/management/commands/: populate_db.py
transactions/migrations/: 0001_initial.py
transactions/services/: dashboard.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
